<resources>
    <string name="app_name">Trainer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nom">Name</string>
    <string name="age">Age</string>
    <string name="valider">Add</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nouvele">New</string>
    <string name="histoire">History</string>
    <string name="stat">Statistics</string>
    <string name="user">User</string>
    <string name="velo">Bicycle</string>
    <string name="course">Running</string>
    <string name="map">Map</string>
    <string name="time">Time :</string>
    <string name="calories">Calories :</string>
    <string name="distance">Distance :</string>
    <string name="pas">Steps :</string>
    <string name="returnn">Close</string>
    <string name="validated">Validated</string>
    <string name="race">Race</string>
    <string name="create_new_user">Create new user</string>
    <string name="create_new_race">Create new race</string>
    <string name="previous_races">Previous races</string>
    <string name="cumulative_statistics">Cumulative statistics</string>
    <string name="start">Start!</string>
    <string name="stop">Stop!</string>
    <string name="select">Select type of race</string>
    <string name="nomVide">Enter the name</string>

    <string name="step_counter">
         android.hardware.sensor.stepcounter
   </string>

   <string name="step_detector">
         android.hardware.sensor.stepdetector
   </string>

    <string name="title_activity_maps">Map</string>
    <string name="partager">Share</string>
</resources>
