<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/principale_photo"
        android:src="@drawable/tete"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/principale_txtNom"
        android:layout_alignTop="@+id/principale_photo"
        android:layout_toRightOf="@+id/principale_photo"
        android:layout_toEndOf="@+id/principale_photo"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/principale_txtDistance"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/principale_chronometer"
        android:layout_alignStart="@+id/principale_chronometer"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/principale_txtCalories"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/principale_txtDistance"
        android:layout_alignStart="@+id/principale_txtDistance"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/principale_txtPas"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignLeft="@+id/principale_txtCalories"
        android:layout_alignStart="@+id/principale_txtCalories"
        android:textColor="#000000" />

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/playy"
        android:id="@+id/principale_imgBtnRun"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/principale_txtNom"
        android:layout_toStartOf="@+id/principale_txtNom" />

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/stopp"
        android:id="@+id/principale_imgBtnStop"
        android:layout_alignTop="@+id/principale_imgBtnRun"
        android:layout_alignLeft="@+id/principale_txtNom"
        android:layout_alignStart="@+id/principale_txtNom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/map"
        android:id="@+id/principale_btnRetour"
        android:layout_alignBottom="@+id/principale_imgBtnStop"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp"
        android:background="#ff900b" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velo"
        android:id="@+id/principale_chbBice"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignLeft="@+id/principale_chbRunning"
        android:layout_alignStart="@+id/principale_chbRunning"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:id="@+id/principale_chbRunning"
        android:layout_above="@+id/imageView4"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/clicknrun"
        android:id="@+id/principale_imgTaining"
        android:layout_above="@+id/imageView4"
        android:layout_alignLeft="@+id/principale_photo"
        android:layout_alignStart="@+id/principale_photo" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/bicycle"
        android:id="@+id/imageView4"
        android:layout_above="@+id/principale_imgBtnRun"
        android:layout_alignLeft="@+id/principale_imgTaining"
        android:layout_alignStart="@+id/principale_imgTaining"
        android:layout_marginBottom="29dp" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/principale_chronometer"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/principale_txtNom"
        android:layout_toEndOf="@+id/principale_txtNom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time"
        android:id="@+id/textView3"
        android:layout_below="@+id/principale_photo"
        android:layout_alignLeft="@+id/principale_photo"
        android:layout_alignStart="@+id/principale_photo"
        android:layout_marginTop="34dp"
        style="@style/Base.ThemeOverlay.AppCompat"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/distance"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="26dp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/calories"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="26dp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pas"
        android:id="@+id/textView10"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:textColor="#000000"
        android:textStyle="bold" />

</RelativeLayout>