<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/histoir_detaile_photo"
        android:src="@drawable/tete"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/histoir_detaile_txtNom"
        android:layout_alignTop="@+id/histoir_detaile_photo"
        android:layout_alignLeft="@+id/histoire_detaile_btnRetour"
        android:layout_alignStart="@+id/histoire_detaile_btnRetour"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/histoire_detaile_txtTime"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/histoir_detaile_photo"
        android:layout_alignLeft="@+id/histoire_detaile_txtDistance"
        android:layout_alignStart="@+id/histoire_detaile_txtDistance"
        android:layout_marginRight="50dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/histoire_detaile_txtDistance"
        android:layout_below="@+id/histoire_detaile_txtTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginRight="50dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/histoire_detaile_txtCalories"
        android:layout_below="@+id/histoire_detaile_txtDistance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginRight="50dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/histoire_detaile_txtPas"
        android:layout_below="@+id/histoire_detaile_txtCalories"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="#000000"
        android:layout_marginRight="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnn"
        android:id="@+id/histoire_detaile_btnRetour"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:background="#ff900b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/time"
        android:id="@+id/textView6"
        android:layout_above="@+id/histoire_detaile_txtDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        style="@style/Base.TextAppearance.AppCompat.Subhead" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/distance"
        android:id="@+id/textView7"
        android:layout_above="@+id/histoire_detaile_txtCalories"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:textColor="#000000"
        style="@style/Base.TextAppearance.AppCompat.Subhead" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/calories"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/histoire_detaile_txtCalories"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:textColor="#000000"
        style="@style/Base.TextAppearance.AppCompat.Subhead" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pas"
        android:id="@+id/textView9"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_alignBottom="@+id/histoire_detaile_txtPas"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:textColor="#000000"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/clicknrun"
        android:id="@+id/histoire_detaile_imgTaining"
        android:layout_above="@+id/histoire_detaile_txtTime"
        android:layout_toRightOf="@+id/histoire_detaile_txtTime"
        android:layout_toEndOf="@+id/histoire_detaile_txtTime" />

</RelativeLayout>